--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						<div class="List__item Tabs__link" data-tab="1">Tab 1</div>
 						<div class="List__item Tabs__link" data-tab="2">Tab 2</div>
 						<div class="List__item Tabs__link" data-tab="3">Tab 3</div>
+						<div class="List__item Tabs__link" data-tab="4">Tab 4</div>
 					</div>
 
 					<div class="Tabs__item" data-tab="1">
@@ -53,6 +54,12 @@
 					<div class="Tabs__item" data-tab="3">
 						<div class="Box Box--placeholder Box--green">
 							<div class="Box__title">Box # 3</div>
+							<div class="Box__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce risus nibh, gravida nec felis quis, facilisis facilisis lectus. Nulla ac orci pretium, condimentum orci quis, accumsan nisi. Aliquam erat volutpat. Curabitur cursus mattis libero, at viverra risus hendrerit quis. Fusce imperdiet tristique tortor non tincidunt. Mauris accumsan urna nec augue feugiat porta. Proin vitae magna in ex malesuada laoreet eget a nulla. Aliquam tristique et elit at consequat. In hac habitasse platea dictumst.</div>
+						</div>
+					</div>
+					<div class="Tabs__item" data-tab="4">
+						<div class="Box Box--placeholder Box--teal">
+							<div class="Box__title">Box # 1</div>
 							<div class="Box__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce risus nibh, gravida nec felis quis, facilisis facilisis lectus. Nulla ac orci pretium, condimentum orci quis, accumsan nisi. Aliquam erat volutpat. Curabitur cursus mattis libero, at viverra risus hendrerit quis. Fusce imperdiet tristique tortor non tincidunt. Mauris accumsan urna nec augue feugiat porta. Proin vitae magna in ex malesuada laoreet eget a nulla. Aliquam tristique et elit at consequat. In hac habitasse platea dictumst.</div>
 						</div>
 					</div>
